scripts/ingress/config.bak/nginx-ingress-rules.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: jenkins-ingress
  #服务在哪个空间内就写哪个空间
  namespace: default 
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  #此service的访问域名
  - host: ingress.jenkins.com   
    http:
      paths:
      - backend:
          serviceName: jenkinsservice  
          servicePort: 8080
